<resources>
    <string name="app_name">SystemUI Tuner</string>
    <string name="to_the_tweaks">To The Tweaks!</string>
    <string name="more">More</string>
    <string name="notice">NOTICE</string>
    <string name="hide_welcome_screen">Hide Welcome Screen</string>
    <string name="instructions">Instructions</string>
    <string name="need_help">Need Help?</string>
    <string name="about">About</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="custom">Custom</string>
    <string name="settings">Settings</string>
    <string name="status_bar">Status Bar</string>
    <string name="sorry">Sorry…</string>
    <string name="enabled">Enabled</string>
    <string name="show">Show</string>
    <string name="select_time">Select Time</string>
    <string name="select_battery_level">Select Battery Level</string>
    <string name="wifi_strength">WiFi Strength</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="mobile_strength">Mobile Strength</string>
    <string name="mobile_type">Mobile Type</string>
    <string name="show_airplane_mode">Show Airplane Mode</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="status_bar_style">Status Bar Style</string>
    <string name="setup">Setup</string>
    <string name="dnd_switch_in_vol_slider">DND Switch in Vol Slider</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="managed_profile_icon">Managed Profile Icon</string>
    <string name="battery_icon">Battery Icon</string>
    <string name="battery_percentage">Battery Percentage</string>
    <string name="cast_icon">Cast Icon</string>
    <string name="rotation_lock_icon">Rotation lock Icon</string>
    <string name="nfc_icon">NFC Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="su_icon">SU Icon</string>
    <string name="network">Network</string>
    <string name="bluetooth_icon">Bluetooth Icon</string>
    <string name="data_saver_icon">Data Saver Icon</string>
    <string name="ethernet_icon">Ethernet Icon</string>
    <string name="hotspot_icon">Hotspot Icon</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="airplane_icon">Airplane Icon</string>
    <string name="wifi_icon">WiFi Icon</string>
    <string name="vpn_icon">VPN Icon</string>
    <string name="sounds_alerts"><![CDATA[Sounds & Alerts]]></string>
    <string name="volume">Volume Icon</string>
    <string name="headset_icon">Headset Icon</string>
    <string name="speakerphone_icon">Speakerphone Icon</string>
    <string name="time_such"><![CDATA[Time & Such]]></string>
    <string name="clock">Clock Icon</string>
    <string name="clock_tile">Clock</string>
    <string name="show_clock_seconds">Show Clock Seconds</string>
    <string name="alarm_clock_icon">Alarm Clock Icon</string>
    <string name="zen_icon">Zen Icon</string>
    <string name="do_not_disturb">Do Not Disturb Icon</string>
    <string name="dnd">Do Not Disturb</string>
    <string name="github" translatable="false">Github</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="donate">Donate</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="xda_thread" translatable="false">XDA Thread</string>
    <string name="reset_blacklist">Reset Blacklist</string>
    <string name="animator_duration_scale">Animator Duration Scale</string>
    <string name="transition_animation_scale">Transition Animation Scale</string>
    <string name="window_animation_scale">Window Animation Scale</string>
    <string name="animation_speeds">Animation Speeds</string>
    <string name="general">General</string>
    <string name="heads_up_notifications">Heads-Up Notifications</string>
    <string name="headphone_volume_warning">Headphone Volume Warning</string>
    <string name="custom_settings_input">Custom Settings Input</string>
    <string name="custom_settings_read">Read Custom Value</string>
    <string name="global">Global</string>
    <string name="secure">Secure</string>
    <string name="system">System</string>
    <string name="ok">OK</string>
    <string name="power_notification_controls">Power Notification Controls</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="safe_mode">Safe Mode</string>
    <string name="enable_custom_settings_input">Enable Custom Settings</string>
    <string name="enable">Enable</string>
    <string name="knox_icon">KNOX Icon</string>
    <string name="smart_network_icon">Smart Network Icon</string>
    <string name="glove_icon">Glove Icon</string>
    <string name="private_mode_icon">Private Mode Icon</string>
    <string name="phone_signal_second_stub" translatable="false">\"Phone Signal Second Stub\"</string>
    <string name="face_icon">Face Icon</string>
    <string name="femtocell_icon">Femtocell Icon</string>
    <string name="gps_icon">GPS Icon</string>
    <string name="gesture_icon">Gesture Icon</string>
    <string name="ims_volte_icon">IMS VoLTE Icon</string>
    <string name="keyguard_wakeup_icon">KeyGuard Wakeup Icon</string>
    <string name="lbs_icon">LBS Icon</string>
    <string name="rcs_icon">RCS Icon</string>
    <string name="safezone_icon">Safezone Icon</string>
    <string name="smart_bonding_icon">Smart Bonding Icon</string>
    <string name="smart_scroll_icon">SmartScroll Icon</string>
    <string name="toddler_icon">Toddler Icon</string>
    <string name="wearable_icon">Wearable Icon</string>
    <string name="wifi_ap_icon">WiFi AP Icon</string>
    <string name="wifi_oxygen_icon">WiFi Oxygen Icon</string>
    <string name="wifi_p2p_icon">WiFi P2P Icon</string>
    <string name="wimax_icon">WiMax Icon</string>
    <string name="remote_call_icon">Remote Call Icon</string>
    <string name="tty_icon">TTY Icon</string>
    <string name="cdma_eri_icon">CDMA ERI Icon</string>
    <string name="dmb">DMB</string>
    <string name="data_connection_icon">Data Connection Icon</string>
    <string name="evdo_signal_icon">EvDo Signal Icon</string>
    <string name="phone_signal_icon">Phone Signal Icon</string>
    <string name="volte">VoLTE</string>
    <string name="vowifi">VoWiFi</string>
    <string name="wifi_calling_icon">WiFi Calling Icon</string>
    <string name="answering_memo_icon">Answering Memo Icon</string>
    <string name="felica_lock_icon">Felica Lock Icon</string>
    <string name="ime_icon">IME Icon</string>
    <string name="nfc_lock_icon">NFC Lock Icon</string>
    <string name="otg_keyboard_icon">OTG Keyboard Icon</string>
    <string name="otg_mouse_icon">OTG Mouse Icon</string>
    <string name="power_saver_icon">Power Saver Icon</string>
    <string name="secure_icon">Secure Icon</string>
    <string name="sync_active_icon">Sync Active Icon</string>
    <string name="sync_failing_icon">Sync Failing Icon</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_auto">Night Mode Auto</string>
    <string name="night_mode_override">Night Mode Override</string>
    <string name="night_mode_adjust_tint">Night Mode Adjust Tint</string>
    <string name="night_display_auto">Night Display Auto</string>
    <string name="night_display_activated">Night Display Activated</string>
    <string name="night_display">Night Display</string>
    <string name="donate_1" translatable="false">$1</string>
    <string name="donate_10" translatable="false">$10</string>
    <string name="donate_2" translatable="false">$2</string>
    <string name="donate_5" translatable="false">$5</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="qs_header_tile_count">QS Header Tile Count</string>
    <string name="fancy_pulldown_animation">Fancy Pulldown Animation</string>
    <string name="move_full_rows">Move Full Rows</string>
    <string name="battery">Battery</string>
    <string name="back_up_blacklist">Back Up Blacklist</string>
    <string name="restore_blacklist">Restore Blacklist</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="touchwiz" translatable="false">TouchWiz</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="sim_count">SIM Count</string>
    <string name="volume_icon_style">Volume Icon Style</string>
    <string name="bluetooth_icon_style">Bluetooth Icon Style</string>
    <string name="mobile_fully">Mobile Fully Connected</string>
    <string name="wifi_fully">WiFi Fully Connected</string>
    <string name="no_sim_icon">No SIM Icon</string>
    <string name="sync_icon">Sync Icon</string>
    <string name="microphone_mute">Microphone Muted Icon</string>
    <string name="immersive_mode">Immersive Mode</string>
    <string name="none">None</string>
    <string name="full">Full</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="navigation_bar_color">Navigation Bar Color</string>
    <string name="pre_confirms">Pre-Confirms</string>
    <string name="config_qs">Configure Quick Tile</string>
    <string name="mode">Mode</string>
    <string name="qs_column_count">QS Column Count</string>
    <string name="qs_row_count">QS Row Count</string>
    <string name="qs_column_count_landscape">QS Column Count (Landscape)</string>
    <string name="qs_row_count_landscape">QS Row Count (Landscape)</string>
    <string name="lockscreen">Lock Screen</string>
    <string name="choose_left">Choose Left Shortcut</string>
    <string name="choose_right">Choose Right Shortcut</string>
    <string name="unlock_device">Unlock Device</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="welcome">Welcome!</string>
    <string name="some_things">Examples</string>
    <string name="no_root">No Root is Needed</string>
    <string name="permissions">Permissions</string>
    <string name="missing_perms">Missing Permissions!</string>
    <string name="which_os">Which operating system is your computer running?</string>
    <string name="on_device">Follow these instructions on your device.</string>
    <string name="on_computer">Follow these instructions on your computer.</string>
    <string name="run_on_computer">Run these commands on your computer. For Linux (Other) and macOS, you will need to use \"./adb\" instead of \"adb\".</string>
    <string name="app_specific">App-Specific</string>
    <string name="blacklist">Blacklist</string>
    <string name="select_apps">Select Apps</string>
    <string name="warning">Warning!</string>
    <string name="high_brightness_warning">High Brightness Warning</string>
    <string name="safe_mode_summary">SAMSUNG USERS KEEP THIS TURNED ON UNLESS YOU HAVE AN AOSP ROM!</string>
    <string name="enable_in_settings">Enable in Settings.</string>
    <string name="reboot_required">(Reboot Required)</string>
    <string name="app_specific_desc">Select apps to be included in or excluded from Immersive Mode. Immersive Mode must be disabled to change these settings.</string>
    <string name="blacklist_desc">When on, selected apps will not use Immersive Mode</string>
    <string name="imm_warn">This feature merely allows you to enable Immersive Mode. It DOES NOT do anything beyond that. Any issues you experience are the fault of your device\'s manufacturer. I CANNOT FIX IT!</string>
    <string name="custom_settings_input_desc">These fields allow you to enter your own custom settings.</string>
    <string name="custom_settings_read_desc">These fields allow you to read the value of a specified key.</string>
    <string name="custom_settings_warning">Be careful what you do here! If you input an incorrect value, you could cause a crash loop, bootloop or worse!</string>
</resources>