<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/status_bar">
        <Preference
            android:key="reset_blacklist"
            android:title="@string/reset_blacklist"
            android:icon="@drawable/ic_settings_backup_restore_black_24dp"/>
        <Preference
            android:key="backup_blacklist"
            android:title="@string/back_up_blacklist"
            android:icon="@drawable/ic_backup_black_24dp"/>
        <Preference
            android:key="restore_blacklist"
            android:title="@string/restore_blacklist"
            android:icon="@drawable/ic_restore_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/networking_data">
        <SwitchPreference
            android:key="airplane"
            android:title="@string/airplane_icon"
            android:icon="@drawable/ic_airplanemode_active_black_24dp"/>
        <SwitchPreference
            android:title="@string/bluetooth_icon"
            android:icon="@drawable/ic_bluetooth_black_24dp"/>
        <SwitchPreference
            android:title="@string/cdma_eri_icon"/>
        <SwitchPreference
            android:title="@string/data_connection_icon"
            android:icon="@drawable/ic_signal_cellular_4_bar_black_24dp"/>
        <SwitchPreference
            android:title="@string/data_saver_icon"
            android:icon="@drawable/ic_data_usage_black_24dp"/>
        <SwitchPreference
            android:title="@string/dmb"/>
        <SwitchPreference
            android:title="@string/ethernet_icon"
            android:icon="@drawable/ic_settings_ethernet_black_24dp"/>
        <SwitchPreference
            android:title="@string/hotspot_icon"
            android:icon="@drawable/ic_wifi_tethering_black_24dp"/>
        <SwitchPreference
            android:title="@string/mobile_icon"
            android:icon="@drawable/ic_signal_cellular_4_bar_black_24dp"/>
        <SwitchPreference
            android:title="@string/evdo_signal_icon"/>
        <SwitchPreference
            android:title="@string/phone_signal_icon"
            android:icon="@drawable/ic_signal_cellular_4_bar_black_24dp"/>
        <SwitchPreference
            android:title="@string/volte"/>
        <SwitchPreference
            android:title="@string/vowifi"/>
        <SwitchPreference
            android:title="@string/vpn_icon"
            android:icon="@drawable/ic_vpn_key_black_24dp"/>
        <SwitchPreference
            android:title="@string/wifi_calling_icon"/>
        <SwitchPreference
            android:title="@string/wifi_icon"
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sounds_alerts">
        <SwitchPreference
            android:title="@string/headset_icon"
            android:icon="@drawable/ic_headset_black_24dp"/>
        <SwitchPreference
            android:title="@string/remote_call_icon"/>
        <SwitchPreference
            android:title="@string/speakerphone_icon"
            android:icon="@drawable/ic_speaker_phone_black_24dp"/>
        <SwitchPreference
            android:title="@string/tty_icon"/>
        <SwitchPreference
            android:title="@string/volume"
            android:icon="@drawable/ic_volume_up_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/time_such">
        <SwitchPreference
            android:title="@string/alarm_clock_icon"
            android:icon="@drawable/ic_alarm_black_24dp"/>
        <SwitchPreference
            android:title="@string/clock"
            android:icon="@drawable/ic_access_time_black_24dp"/>
        <SwitchPreference
            android:title="@string/do_not_disturb"
            android:icon="@drawable/ic_do_not_disturb_on_black_24dp"/>
        <SwitchPreference
            android:title="@string/zen_icon"
            android:icon="@drawable/ic_do_not_disturb_on_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/miscellaneous">
        <SwitchPreference
            android:title="@string/answering_memo_icon"/>
        <SwitchPreference
            android:title="@string/battery_icon"
            android:icon="@drawable/ic_battery_std_black_24dp"/>
        <SwitchPreference
            android:title="@string/cast_icon"
            android:icon="@drawable/ic_cast_black_24dp"/>
        <SwitchPreference
            android:title="@string/felica_lock_icon"/>
        <SwitchPreference
            android:title="@string/ime_icon"/>
        <SwitchPreference
            android:title="@string/location_icon"
            android:icon="@drawable/ic_location_on_black_24dp"/>
        <SwitchPreference
            android:title="@string/managed_profile_icon"/>
        <SwitchPreference
            android:title="@string/nfc_icon"
            android:icon="@drawable/ic_nfc_black_24dp"/>
        <SwitchPreference
            android:title="@string/nfc_lock_icon"/>
        <SwitchPreference
            android:title="@string/otg_keyboard_icon"
            android:icon="@drawable/ic_keyboard_black_24dp"/>
        <SwitchPreference
            android:title="@string/otg_mouse_icon"
            android:icon="@drawable/ic_mouse_black_24dp"/>
        <SwitchPreference
            android:title="@string/power_saver_icon"/>
        <SwitchPreference
            android:title="@string/rotation_lock_icon"
            android:icon="@drawable/ic_screen_lock_rotation_black_24dp"/>
        <SwitchPreference
            android:title="@string/secure_icon"
            android:icon="@drawable/ic_security_black_24dp"/>
        <SwitchPreference
            android:title="@string/su_icon"/>
        <SwitchPreference
            android:title="@string/sync_active_icon"
            android:icon="@drawable/ic_sync_black_24dp"/>
        <SwitchPreference
            android:title="@string/sync_failing_icon"
            android:icon="@drawable/ic_sync_problem_black_24dp"/>
    </PreferenceCategory>

</PreferenceScreen>