<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_settings"
        android:title="@string/settings"/>

    <item android:id="@+id/action_about"
        android:title="@string/about"/>

    <item android:title="@string/more" >
        <menu>
            <group>
                <item
                    android:id="@+id/action_github"
                    android:title="@string/github" />
                <item
                    android:id="@+id/action_telegram"
                    android:title="@string/telegram" />
                <item
                    android:id="@+id/action_xda_thread"
                    android:title="@string/xda_thread" />
                <item
                    android:id="@+id/action_privacy_policy"
                    android:title="@string/privacy_policy" />
                <item
                    android:id="@+id/action_terms"
                    android:title="@string/terms_of_service" />
            </group>
        </menu>
    </item>

</menu>