<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="statbar"
        android:icon="@drawable/ic_visibility_off_black_24dp"
        android:title="@string/status_bar"
        />

    <Preference
        android:key="qs"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/quick_settings"
        />

    <Preference
        android:key="demo"
        android:icon="@drawable/ic_tv_black_24dp"
        android:title="@string/demo_mode"
        />

    <Preference
        android:key="touchwiz"
        android:icon="@drawable/ic_phone_android_black_24dp"
        android:title="@string/touchwiz"
        />

    <Preference
        android:key="immersive"
        android:icon="@drawable/ic_fullscreen_black_24dp"
        android:title="@string/immersive_mode"
        />

    <Preference
        android:key="lockscreen"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        android:title="@string/lockscreen"
        />

    <Preference
        android:key="misc"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/miscellaneous"
        />

    <Preference
        android:enabled="false"
        android:key="custom"
        android:icon="@drawable/ic_brush_black_24dp"
        android:title="@string/custom"
        android:summary="@string/enable_in_settings"
        />

</PreferenceScreen>