<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/general">
        <Preference
            android:title="@string/enable"
            android:key="sysui_demo_allowed"/>
        <SwitchPreference
            android:title="@string/show"
            android:key="show_demo"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/miscellaneous">
        <com.zacharee1.systemuituner.prefs.TimePreference
            android:title="@string/select_time"
            android:key="selected_time"/>
        <com.zacharee1.systemuituner.prefs.SliderPreferenceEmbedded
            app:max="100"
            android:layout="@layout/pref_view_embedded"
            android:widgetLayout="@layout/slider_pref_view"
            android:title="@string/select_battery_level"
            android:key="selected_battery_level"/>
        <com.zacharee1.systemuituner.prefs.SliderPreferenceEmbedded
            app:max="4"
            android:layout="@layout/pref_view_embedded"
            android:widgetLayout="@layout/slider_pref_view"
            android:title="@string/wifi_strength"
            android:key="wifi_strength"/>
        <com.zacharee1.systemuituner.prefs.SliderPreferenceEmbedded
            app:max="4"
            android:layout="@layout/pref_view_embedded"
            android:widgetLayout="@layout/slider_pref_view"
            android:title="@string/mobile_strength"
            android:key="selected_mobile_strength"/>
        <com.zacharee1.systemuituner.prefs.SliderPreferenceEmbedded
            app:max="7"
            android:layout="@layout/pref_view_embedded"
            android:widgetLayout="@layout/slider_pref_view"
            android:title="SIM Count"
            android:key="sim_count" />
        <ListPreference
            android:persistent="true"
            android:title="@string/mobile_type"
            android:entries="@array/mobile_type_display"
            android:entryValues="@array/mobile_type_vals"
            android:key="mobile_type"/>
        <ListPreference
            android:persistent="true"
            android:title="@string/status_bar_style"
            android:entries="@array/statbar_style_display"
            android:entryValues="@array/statbar_style_vals"
            android:key="status_bar_style"/>
        <ListPreference
            android:persistent="true"
            android:title="Volume Icon Style"
            android:entries="@array/volume_icon_display"
            android:entryValues="@array/volume_icon_values"
            android:defaultValue="hidden"
            android:key="volume_icon" />
        <ListPreference
            android:persistent="true"
            android:title="Bluetooth Icon Style"
            android:entries="@array/bluetooth_icon_display"
            android:entryValues="@array/bluetooth_icon_values"
            android:defaultValue="hidden"
            android:key="bluetooth_icon" />
        <SwitchPreference
            android:title="@string/show_notifications"
            android:key="show_notifications"/>
        <SwitchPreference
            android:title="@string/battery_charging"
            android:key="battery_charging"/>
        <SwitchPreference
            android:title="@string/show_airplane_mode"
            android:key="show_airplane"/>
        <SwitchPreference
            android:title="Show Mobile Icon"
            android:key="show_mobile"/>
        <SwitchPreference
            android:title="Mobile Fully Connected"
            android:key="mobile_fully_connected"/>
        <SwitchPreference
            android:title="Show WiFi Icon"
            android:key="show_wifi"/>
        <SwitchPreference
            android:title="WiFi Fully Connected"
            android:key="wifi_fully_connected"/>
        <SwitchPreference
            android:title="No SIM Icon"
            android:key="no_sim" />
        <SwitchPreference
            android:title="Location Icon"
            android:key="location" />
        <SwitchPreference
            android:title="Alarm Icon"
            android:key="alarm" />
        <SwitchPreference
            android:title="Sync Icon"
            android:key="sync" />
        <SwitchPreference
            android:title="TTY Icon"
            android:key="tty" />
        <SwitchPreference
            android:title="CDMA ERI Icon"
            android:key="eri" />
        <SwitchPreference
            android:title="Mute Icon"
            android:key="mute" />
        <SwitchPreference
            android:title="Speakerphone Icon"
            android:key="speakerphone" />
    </PreferenceCategory>

</PreferenceScreen>